# aeron-client-rs

./: Cargo.toml
examples/: publisher.rs  subscriber.rs
src/: buffer_claim.rs  client.rs  context.rs  destination.rs  exclusive_publication.rs  fragment_assembler.rs  fragment_processor.rs  header.rs  image.rs  lib.rs  publication.rs  subscription.rs
src/client/: mod.rs
